--- a/Groovy/Components/Layout/NavMenu.razor
+++ b/Groovy/Components/Layout/NavMenu.razor
@@ -75,7 +75,7 @@
 
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="recommendations">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Recommendation
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Find My Groove
                     </NavLink>
                 </div>
 
